# LumintoBot

./: .gitignore  LICENSE  README.md  bot.cmd  bot.sh  home.md  main.py  map.html  pyproject.toml  requirements.txt  retype.yml  update.sh
configs/: chats.yml  config.yml  coofs.yml  flood.yml  tokens_example.yml  vars.yml
db/: crocodile_words.txt  shop_all.json  shop_current.json  tasks.json
db/enchants/: en.json  ru.json
db/notes/: донат.txt  коннект.txt  опс.txt  префикс.txt  пуш.txt  тлаунчер.txt
depr/: base.py  callback.py  db.py  webhooks.py
info/: enchants.md  index.yml  ipv6.md  updates.md  versions.md  vip.md
modules/: ai.py  chart.py  config.py  creator_shop.py  crosssocial.py  db.py  db_old.py  deprecated.py  dice.py  diff.py  floodwait.py  formatter.py  get_theme.py  ip.py  log.py  log_shop.py  map.py  mcrcon.py  mining.py  morphy.py  patches.py  pathes.py  phrase.py  phrases.py  pic.py  ports.py  random.py  sys.py  system_info.py  task_gen.py  tasks.py  telegram.py  time_to.py  vk.py  web.py  webhooks.py
modules/deprecated/: ai.py  casino.py  crocoai.py  crocodile.py  ip.py  map.py  ping.py  tstat.py  update.py  vk.py
modules/telegram/: actions.py  admins.py  ai.py  base.py  callbacks.py  client.py  forum.py  func.py  games.py  global_checks.py  mailing.py  notes.py  referrals.py  shop.py  states.py  statistic.py  tickets.py  trading.py
modules/vk/: ai.py  client.py
notes/: писю в рот лимки.txt
roleplay/: about.md  index.yml
rules/: base.md  list.md
scripts/: chatdata_compression.py  creator_shop.py  map.py  move_whitelist.py
(+18 files in other folders)
