[project]
name = "lumintobot"
version = "1.0"
description = "Бот люминта с клёвыми функциями!"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.2",
    "aioping>=0.4.0",
    "asyncmy>=0.2.10",
    "bestconfig>=1.3.6",
    "cryptg>=0.5.2",
    "cryptography>=46.0.3",
    "google-genai[aiohttp]==1.20",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "orjson>=3.11.4",
    "psutil>=7.1.3",
    "pymorphy3>=2.0.6",
    "seaborn>=0.13.2",
    "telethon>=1.42.0",
    "uvloop>=0.22.1",
    "vkbottle>=4.6.2",
]

[tool.ruff]
unsafe-fixes = true
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"